--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo-monogram-light.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="canonical" href="https://leventestudio.app/" />
+
     <title>Levente Stúdió – Digitális problémák, tiszta megoldások</title>
     <meta name="description" content="Weboldalak, SEO és technikai rendszerek szakértői rendbetétele. Nem sablonokkal – gondolkodással." />
+
     <meta property="og:title" content="Levente Stúdió – Digitális problémák, tiszta megoldások" />
     <meta property="og:description" content="Weboldalak, SEO és technikai rendszerek szakértői rendbetétele. Nem sablonokkal – gondolkodással." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://leventestudio.app/" />
+    <meta property="og:image" content="https://leventestudio.app/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Levente Stúdió – Digitális problémák, tiszta megoldások" />
+    <meta name="twitter:description" content="Weboldalak, SEO és technikai rendszerek szakértői rendbetétele. Nem sablonokkal – gondolkodással." />
+    <meta name="twitter:image" content="https://leventestudio.app/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
