--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="canonical" href="https://leventestudio.app/" />
 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="canonical" href="https://leventestudio.app/" />
+
+    <meta property="og:url" content="https://leventestudio.app/" />
+    <meta property="og:image" content="https://leventestudio.app/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <title>Levente Stúdió – Digitális problémák, tiszta megoldások</title>
+    <meta name="twitter:title" content="Levente Stúdió – Digitális problémák, tiszta megoldások" />
+    <meta name="twitter:description" content="Weboldalak, SEO és technikai rendszerek szakértői rendbetétele. Nem sablonokkal – gondolkodással." />
+    <meta name="twitter:image" content="https://leventestudio.app/og-image.jpg" />
     <meta name="description" content="Weboldalak, SEO és technikai rendszerek szakértői rendbetétele. Nem sablonokkal – gondolkodással." />
 
     <meta property="og:title" content="Levente Stúdió – Digitális problémák, tiszta megoldások" />
