--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <title>Levente Stúdió – Digitális problémák, tiszta megoldások</title>
-    <meta name="twitter:title" content="Levente Stúdió – Digitális problémák, tiszta megoldások" />
-    <meta name="twitter:description" content="Weboldalak, SEO és technikai rendszerek szakértői rendbetétele. Nem sablonokkal – gondolkodással." />
+    <title>Weboldal Audit és SEO Szakértő Budapest | Levente Stúdió</title>
+    <meta name="twitter:title" content="Weboldal Audit és SEO Szakértő Budapest | Levente Stúdió" />
+    <meta name="twitter:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú diagnózis, mérhető eredmények. Hívj most: +36 20 282 6843" />
     <meta name="twitter:image" content="https://leventestudio.app/og-image.jpg" />
-    <meta name="description" content="Weboldalak, SEO és technikai rendszerek szakértői rendbetétele. Nem sablonokkal – gondolkodással." />
+    <meta name="description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú diagnózis, mérhető eredmények. Hívj most: +36 20 282 6843" />
 
-    <meta property="og:title" content="Levente Stúdió – Digitális problémák, tiszta megoldások" />
-    <meta property="og:description" content="Weboldalak, SEO és technikai rendszerek szakértői rendbetétele. Nem sablonokkal – gondolkodással." />
+    <meta property="og:title" content="Weboldal Audit és SEO Szakértő Budapest | Levente Stúdió" />
+    <meta property="og:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú diagnózis, mérhető eredmények. Hívj most: +36 20 282 6843" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://leventestudio.app/" />
     <meta property="og:image" content="https://leventestudio.app/og-image.jpg" />
@@ -35,8 +35,8 @@
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Levente Stúdió – Digitális problémák, tiszta megoldások" />
-    <meta name="twitter:description" content="Weboldalak, SEO és technikai rendszerek szakértői rendbetétele. Nem sablonokkal – gondolkodással." />
+    <meta name="twitter:title" content="Weboldal Audit és SEO Szakértő Budapest | Levente Stúdió" />
+    <meta name="twitter:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú diagnózis, mérhető eredmények. Hívj most: +36 20 282 6843" />
     <meta name="twitter:image" content="https://leventestudio.app/og-image.jpg" />
   </head>
   <body>
