--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
     <title>Weboldal Audit és SEO Szakértő Budapest | Levente Stúdió</title>
     <meta name="twitter:title" content="Weboldal Audit és SEO Szakértő Budapest | Levente Stúdió" />
-    <meta name="twitter:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú diagnózis, mérhető eredmények. Hívj most: +36 20 282 6843" />
+    <meta name="twitter:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú elemzés, mérhető eredmények. Hívj most!" />
     <meta name="twitter:image" content="https://leventestudio.app/og-image.jpg" />
-    <meta name="description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú diagnózis, mérhető eredmények. Hívj most: +36 20 282 6843" />
+    <meta name="description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú elemzés, mérhető eredmények. Hívj most!" />
 
     <meta property="og:title" content="Weboldal Audit és SEO Szakértő Budapest | Levente Stúdió" />
-    <meta property="og:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú diagnózis, mérhető eredmények. Hívj most: +36 20 282 6843" />
+    <meta property="og:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú elemzés, mérhető eredmények. Hívj most!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://leventestudio.app/" />
     <meta property="og:image" content="https://leventestudio.app/og-image.jpg" />
@@ -36,7 +36,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Weboldal Audit és SEO Szakértő Budapest | Levente Stúdió" />
-    <meta name="twitter:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú diagnózis, mérhető eredmények. Hívj most: +36 20 282 6843" />
+    <meta name="twitter:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú elemzés, mérhető eredmények. Hívj most!" />
     <meta name="twitter:image" content="https://leventestudio.app/og-image.jpg" />
   </head>
   <body>
