--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
     <meta name="twitter:title" content="Weboldal Audit és SEO Szakértő Budapest | Levente Stúdió" />
     <meta name="twitter:description" content="Weboldal audit, SEO és teljesítmény optimalizálás Budapesten. Adat-alapú elemzés, mérhető eredmények. Hívj most!" />
     <meta name="twitter:image" content="https://leventestudio.app/og-image.jpg" />
+
+    <!-- Plausible Analytics - Privacy-first, no cookie banner needed -->
+    <!-- Replace "leventestudio.app" with your actual domain when ready -->
+    <script defer data-domain="leventestudio.app" src="https://plausible.io/js/script.js"></script>
   </head>
   <body>
     <div id="root"></div>
